# etelemetry-server

./: .env  .gitattributes  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Procfile  README.md  docker-compose.yml  mongo.env  requirements.txt  setup.cfg  setup.py
etelemetry/: __init__.py  app.py  backend.py  database.py  getters.py  utils.py
etserver/: __init__.py  _version.py  app.py  database.py  getters.py  serve.py  utils.py
etserver/tests/: test_server.py
