[metadata]
url = https://github.com/mgxd/etelemetry-server
author = Senseable Intelligence Group
maintainer = Mathias Goncalves
maintainer_email = mathiasg@mit.edu
description = Etelemetry server
license = Apache License, 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
    sanic == 19.3.1
    aiohttp
    aiofiles
    requests
    motor
test_requires =
    pytest >= 4.4.0, < 6.0.0
    pytest-cov
    pytest-sanic
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-sanic
    codecov
tests =
    %(test)s
all =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = etserver/_version.py
versionfile_build = etserver/_version.py
tag_prefix =
parentdir_prefix =
